[project]
name = "private-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "chromadb>=1.5.8",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.8",
    "pypdf>=6.10.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
]
